fix(STN-347): icons not showing up in horizontal date stacked cards for tradl

--- a/docroot/themes/humsci/humsci_basic/src/scss/components/_card.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/components/_card.scss
@@ -126,21 +126,17 @@
     &--date {
       // only apply calendar icon when the label exists
       .views-label-field-hs-event-date + .field-content {
-        @include hb-colorful {
-          @include hb-icon-calendar($color: 'secondary');
-        }
+        @include hb-icon-calendar($color: 'secondary');
       }
     }
 
     &--location {
       // only apply location pin icon when the label exists
       .views-label-field-hs-event-location + .field-content {
-        @include hb-colorful {
-          @include hb-icon-location($color: 'secondary');
+        @include hb-icon-location($color: 'secondary');
 
-          @include grid-media-min('sm') {
-            padding-left: hb-calculate-rems(24px); // width of icon + 10px
-          }
+        @include grid-media-min('sm') {
+          padding-left: hb-calculate-rems(24px); // width of icon + 10px
         }
       }
     }
@@ -148,12 +144,10 @@
     &--speaker {
       // only apply speaker icon when the label exists
       .views-label-field-hs-event-speaker + .field-content {
-        @include hb-colorful {
-          @include hb-icon-speaker($color: 'secondary');
+        @include hb-icon-speaker($color: 'secondary');
 
-          @include grid-media-min('sm') {
-            padding-left: hb-calculate-rems(30px); // width of icon + 10px
-          }
+        @include grid-media-min('sm') {
+          padding-left: hb-calculate-rems(30px); // width of icon + 10px
         }
       }
     }
